#+link:    compat-srht https://todo.sr.ht/~pkal/compat/
#+link:    compat-gh   https://github.com/emacs-compat/compat/issues/
#+options: toc:nil num:nil author:nil

* Release of "Compat" Version 29.1.4.4

- Fix ~Package-Requires~ header in compat.el
- Fix ~Maintainer~ header in compat.el

(Release <2023-11-13 Mon>)

* Release of "Compat" Version 29.1.4.3

- compat-29: Add function =char-uppercase-p=.
- compat-29: Add function =window-configuration-equal-p=.

(Release <2023-11-04 Sat>)

* Release of "Compat" Version 29.1.4.2

- compat-28: Improve =make-separator-line= visuals on graphic displays.
- compat-28: Add =native-comp-available-p=, which always returns nil.
- compat-29: Add variable =lisp-directory=.
- compat-30: Replace ~copy-tree~ with version from Emacs 30, support
  copying records with non-nil optional second argument.

(Release <2023-07-30 Sun>)

* Release of "Compat" Version 29.1.4.1

- compat-29: Add ~directory-abbrev-apply~.
- compat-29: Add ~directory-abbrev-make-regexp~.

(Release <2023-03-26 Sun>)

* Release of "Compat" Version 29.1.4.0

- compat-27: Drop obsolete ~compat-call dired-get-marked-files~.
- compat-28: Add support for ~defcustom~ type ~natnum~.
- compat-29: Add ~with-restriction~ and ~without-restriction~.
- compat-29: Add ~cl-constantly~.
- compat-29: Drop ~with-narrowing~ which was renamed to ~with-restriction~.
- compat-28: Add support for ~defcustom~ type ~key~.

(Release <2023-03-05 Sun>)

* Release of "Compat" Version 29.1.3.4

- Ensure that ~seq~ is required properly both at compile time and runtime, such
  that compilation of downstream packages works even if Compat itself is not
  compiled. Magit uses a complex continuous integration system, where Magit is
  compiled and tested, while the Compat dependency is not compiled.
- compat-28: Add ~process-lines-handling-status~ and ~process-lines-ignore-status~.

(Release <2023-02-11 Sat>)

* Release of "Compat" Version 29.1.3.3

- compat-27: Add ~with-suppressed-warnings~.